# mobile-ai-bench

./: .bazelrc  .gitignore  .gitlab-ci.yml  README.md  README_zh.md  WORKSPACE  requirements.txt
aibench/: BUILD  aibench.bzl
aibench/benchmark/: BUILD  benchmark.cc  benchmark.h  benchmark_main.cc
aibench/benchmark/imagenet/: imagenet_groundtruth_labels.txt  imagenet_postprocessor.cc  imagenet_postprocessor.h  imagenet_preprocessor.cc  imagenet_preprocessor.h
aibench/executors/: BUILD  base_executor.cc  base_executor.h
aibench/executors/hiai/: hiai_executor.cc  hiai_executor.h
aibench/executors/mace/: mace_executor.cc  mace_executor.h
aibench/executors/mnn/: mnn_executor.cc  mnn_executor.h
aibench/executors/ncnn/: ncnn_executor.cc  ncnn_executor.h
aibench/executors/snpe/: snpe_executor.cc  snpe_executor.h
aibench/executors/tflite/: tflite_executor.cc  tflite_executor.h
aibench/executors/tnn/: tnn_executor.cc  tnn_executor.h
aibench/port/: BUILD.bazel  env.cc  logger.cc
aibench/port/android/: BUILD.bazel  env.cc  env.h  logger.cc  logger.h  malloc_logger.cc  malloc_logger.h
aibench/port/linux/: BUILD.bazel  env.cc  env.h
aibench/port/linux_base/: BUILD.bazel  env.cc  env.h
aibench/port/posix/: BUILD.bazel  backtrace.h  file_system.cc  file_system.h  time.h
aibench/proto/: BUILD  aibench.proto  base.proto  test.py
aibench/python/: BUILD  bench_engine.py  benchmark.py  sh_commands.py
aibench/python/device/: adb_device.py  device.py  device_manager.py  host_device.py  huawei_adb_device.py  qualcomm_adb_device.py  ssh_device.py
aibench/python/evaluators/: base_evaluator.py  coco_evaluator.py  evaluator_test.py
aibench/python/utils/: bench_utils.py  common.py  sh_commands.py
aibench/utils/: BUILD.bazel  status.cc
include/: BUILD.bazel
include/aibench/port/: env.h  file_system.h  logger.h
include/aibench/public/: aibench.h
include/aibench/utils/: logging.h  macros.h  memory.h  string_util.h
nnbench/: BUILD  nnbench.bzl
nnbench/benchmark/: BUILD  benchmark.cc  benchmark.h  benchmark_main.cc
nnbench/executors/: BUILD  base_executor.cc  base_executor.h
nnbench/executors/mace/: mace_executor.cc  mace_executor.h
nnbench/executors/ncnn/: ncnn_executor.cc  ncnn_executor.h
nnbench/executors/snpe/: snpe_executor.cc  snpe_executor.h  snpe_utils.cc  snpe_utils.h
nnbench/executors/tflite/: tflite_executor.cc  tflite_executor.h
report/: csv_to_html.py  index.html
tools/: bazel.rc  benchmark.py  benchmark.sh  build_mace.sh  common.py  configs.yml  device.py  get_tflite.sh  google-format.sh  model_and_input.yml  model_list.py  power.sh  sh_commands.py
tools/arm_compiler/: CROSSTOOL
tools/cmake_toolchain/: BUILD  cmake.bzl  toolchain.cmake.tpl
