package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "port",
    deps = [
        "//aibench/port/android:port_android",
        "//aibench/port/linux:port_linux",
    ],
)

cc_library(
    name = "port_base",
    srcs = [
        "env.cc",
        "logger.cc",
    ],
    deps = [
        "//include:public_headers",
    ],
)
