package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

load("//aibench:aibench.bzl", "if_linux")

cc_library(
    name = "port_linux",
    srcs = if_linux(glob([
        "*.cc",
    ])),
    hdrs = if_linux(glob([
        "*.h",
    ])),
    deps = if_linux([
        "//aibench/port/linux_base:port_linux_base",
    ]),
    alwayslink = 1,
)
