package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "port_linux_base",
    srcs = glob([
        "*.cc",
    ]),
    hdrs = glob([
        "*.h",
    ]),
    deps = [
        "//aibench/port:port_base",
        "//aibench/port/posix:port_posix",
    ],
    alwayslink = 1,
)
